fix: height overflow on mobile devices

--- a/roshambo-ui/src/App.css
+++ b/roshambo-ui/src/App.css
@@ -4,10 +4,6 @@
   text-align: center;
 }
 
-.container {
-  min-height: 100vh;
-}
-
 .logo {
   height: 6em;
   padding: 1.5em;
